--- a/tests/zfs-tests/include/commands.cfg
+++ b/tests/zfs-tests/include/commands.cfg
@@ -105,6 +105,7 @@ export SYSTEM_FILES_COMMON='arp
     umask
     umount
     uname
+    uniq
     uuidgen
     vmstat
     wait
@@ -190,15 +191,18 @@ export ZFSTEST_FILES='btree_test
     chg_usr_exec
     devname2devid
     dir_rd_update
+    fiemap
     file_check
     file_trunc
     file_write
+    getholes
     get_diff
     largest_file
     libzfs_input_check
     mkbusy
     mkfile
     mkfiles
+    mkholes
     mktree
     mmap_exec
     mmap_libaio
